--- a/ui/src/ide/editor/Launcher.scss
+++ b/ui/src/ide/editor/Launcher.scss
@@ -35,6 +35,8 @@
 
 .LauncherArea {
   padding: 40px;
+  height: 100%;
+  width: 100%;
 }
 
 .resourceLogoImage {
